--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
     "inquirer": "^7.3.3",
     "jest": "^26.6.3",
     "mysql2": "^2.2.5"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/taylor124/employee-manager-Creator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/taylor124/employee-manager-Creator/issues"
+  },
+  "homepage": "https://github.com/taylor124/employee-manager-Creator#readme"
 }
